--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -52,6 +52,10 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: "bebasneue";
+  src: url(../fonts/bebasneue-regular.ttf);
+}
 :root {
   --primary-color: black;
   --secondary-color: white;
@@ -65,6 +69,7 @@ body {
   background-color: var(--primary-color);
   color: var(--text-color);
   line-height: var(--line-height-base);
+  padding: 3rem;
 }
 
 main {
@@ -99,4 +104,18 @@ img {
 }
 .section-top__icon {
   max-width: 20%;
+}
+
+.intro-facts {
+  text-align: center;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.intro-facts__title {
+  font-family: "bebasneue";
+}
+.intro-facts__text {
+  max-width: 70ch;
 }/*# sourceMappingURL=style.css.map */
