--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,6 +1,12 @@
 // Imports all css assets
 @use "reset.css";
 
+// Heading font
+@font-face {
+    font-family: "bebasneue";
+    src: url(../fonts/bebasneue-regular.ttf);
+}
+
 // Variables
 :root {
     --primary-color: black;
@@ -17,6 +23,7 @@ body {
     background-color: var(--primary-color);
     color: var(--text-color);
     line-height: var(--line-height-base);
+    padding: 3rem;
 }
 
 main {
@@ -53,5 +60,22 @@ img {
 
     &__icon {
         max-width: 20%;
+    }
+}
+
+
+// Facts about goal 6
+.intro-facts {
+    text-align: center;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__title {
+        font-family: 'bebasneue';
+    }
+    &__text {
+        max-width: 70ch;
     }
 }
