fonts + style changes

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -54,7 +54,12 @@ table {
 
 @font-face {
   font-family: "bebasneue";
-  src: url(../fonts/bebasneue-regular.ttf);
+  src: url(../fonts/bebasneue/bebasneue-regular.ttf);
+}
+@font-face {
+  font-family: "open-sans";
+  src: url(../fonts/open_sans/OpenSans-VariableFont_wdth\,wght.ttf);
+  font-weight: 400;
 }
 :root {
   --primary-color: black;
@@ -65,7 +70,7 @@ table {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "open-sans", sans-serif;
   background-color: var(--primary-color);
   color: var(--text-color);
   line-height: var(--line-height-base);
@@ -76,16 +81,20 @@ main {
   padding: 1.2em;
 }
 
+h1, h2 {
+  font-family: "bebasneue";
+}
+
 h1 {
   font-size: 2em;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 p {
-  font-size: 1em;
+  font-size: 1.1em;
   line-height: var(--line-height-paragraph);
 }
 
@@ -112,9 +121,6 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.intro-facts__title {
-  font-family: "bebasneue";
 }
 .intro-facts__text {
   max-width: 70ch;
