--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -4,7 +4,14 @@
 // Heading font
 @font-face {
     font-family: "bebasneue";
-    src: url(../fonts/bebasneue-regular.ttf);
+    src: url(../fonts/bebasneue/bebasneue-regular.ttf);
+}
+
+// Main font
+@font-face {
+    font-family: "open-sans";
+    src: url(../fonts/open_sans/OpenSans-VariableFont_wdth\,wght.ttf);
+    font-weight: 400;
 }
 
 // Variables
@@ -19,7 +26,7 @@
 
 //Globals
 body {
-    font-family: sans-serif;
+    font-family: 'open-sans', sans-serif;
     background-color: var(--primary-color);
     color: var(--text-color);
     line-height: var(--line-height-base);
@@ -30,16 +37,20 @@ main {
     padding: 1.2em;
 }
 
+h1, h2 {
+    font-family: 'bebasneue';
+}
+
 h1 {
     font-size: 2em;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.1em;
     line-height: var(--line-height-paragraph);
 }
 
@@ -72,9 +83,6 @@ img {
     flex-direction: column;
     align-items: center;
 
-    &__title {
-        font-family: 'bebasneue';
-    }
     &__text {
         max-width: 70ch;
     }
