--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,6 +55,7 @@ table {
 :root {
   --primary-color: black;
   --secondary-color: white;
+  --backround-color: #0082b5;
   --text-color: white;
   --line-height-base: 1.2;
   --line-height-paragraph: 1.1;
@@ -91,12 +92,21 @@ img {
 }
 
 .section-top {
-  color: aquamarine;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  height: 100vh;
+  gap: 2%;
 }
 .section-top__title {
   font-size: 3.5em;
 }
+.section-top__text {
+  font-size: 2em;
+  max-width: 50%;
+}
 .section-top__icon {
-  max-width: 20%;
+  max-width: 10%;
 }/*# sourceMappingURL=style.css.map */
