--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -5,6 +5,7 @@
 :root {
     --primary-color: black;
     --secondary-color: white;
+    --backround-color: #0082b5;
     --text-color: white;
     //Font styles
     --line-height-base: 1.2;
@@ -42,16 +43,25 @@ img {
     height: auto;
 }
 
-// Section 1
+// Section 1 - Animated waterdrop
 .section-top {
-    color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    height: 100vh;
+    gap: 2%;
 
     &__title {
         font-size: 3.5em;
     }
+    &__text {
+        font-size: 2em;
+        max-width: 50%;
+    }
 
     &__icon {
-        max-width: 20%;
+        max-width: 10%;
     }
 }
