--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -11,7 +11,6 @@
 @font-face {
     font-family: "open-sans";
     src: url(../fonts/open_sans/OpenSans-VariableFont_wdth\,wght.ttf);
-    font-weight: 400;
 }
 
 // Variables
@@ -20,8 +19,8 @@
     --secondary-color: white;
     --text-color: white;
     //Font styles
-    --line-height-base: 1.2;
-    --line-height-paragraph: 1.1;
+    --line-height-base: 1.2rem;
+    --line-height-paragraph: 1.5rem;
 }
 
 //Globals
@@ -30,11 +29,10 @@ body {
     background-color: var(--primary-color);
     color: var(--text-color);
     line-height: var(--line-height-base);
-    padding: 3rem;
 }
 
 main {
-    padding: 1.2em;
+    padding: 3rem;
 }
 
 h1, h2 {
@@ -42,15 +40,17 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
+    margin-block-end: 1rem;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
-p {
-    font-size: 1.1em;
+p, li {
+    font-size: 1.1rem;
+    font-weight: 400;
     line-height: var(--line-height-paragraph);
 }
 
@@ -66,7 +66,7 @@ img {
     text-align: center;
 
     &__title {
-        font-size: 3.5em;
+        font-size: 3.5rem;
     }
 
     &__icon {
@@ -78,12 +78,74 @@ img {
 // Facts about goal 6
 .intro-facts {
     text-align: center;
-    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     &__text {
-        max-width: 70ch;
+        max-width: 80ch;
+    }
+}
+
+.facts {
+    display: grid;
+    gap: 10rem;
+
+    &__item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__item--reverse {
+        text-align: right;
+    }
+
+    &__text {
+        width: 60ch;
+    }
+
+    img {
+        width: 80px;
+    }
+}
+
+.message {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-block: 2rem;
+
+    &__text {
+        max-width: 75ch;
+    }
+
+    &__slogan {
+        font-size: 1.5rem;
+        margin-block: 3rem;
+        color: rgb(72, 178, 239);
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    &__btn {
+        padding: 1.2rem;
+        border-radius: 1rem;
+        border: none;
+        font-size: 0.9rem;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+}
+
+.footer {
+    padding: 2.5rem;
+    text-align: center;
+    color: #8ba7b5;
+    background-color: #09557E;
+
+    &__text {
+        font-size: 0.8rem;
     }
 }
