--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -140,17 +140,17 @@ img {
   max-width: 10%;
 }
 
-.intro-facts {
+.facts__intro {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-block: 5rem;
 }
-.intro-facts__text {
+.facts__text {
   max-width: 80ch;
 }
-
-.facts {
+.facts__container {
   display: grid;
   gap: 10rem;
 }
@@ -162,19 +162,17 @@ img {
 .facts__item--reverse {
   text-align: right;
 }
-.facts__text {
-  width: 60ch;
-}
 .facts img {
   width: 80px;
 }
 
 .message {
+  border-top: 0.1rem solid #09557E;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-block: 2rem;
+  padding-block-start: 4rem;
 }
 .message__text {
   max-width: 75ch;
