--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -82,7 +82,8 @@ main {
   padding: 1.2em;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-family: "bebasneue";
 }
 
@@ -126,6 +127,7 @@ img {
 }
 
 .section-wave {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -137,9 +139,20 @@ img {
   font-size: 3em;
 }
 .section-wave__icon {
-  max-width: 10%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  background: url(/assets/elements/wave.svg) repeat-x;
+  animation: wave-move 15s linear infinite;
 }
 
+@keyframes wave-move {
+  100% {
+    background-position-x: -50%;
+  }
+}
 .intro-facts {
   text-align: center;
   padding: 2rem;
@@ -149,4 +162,4 @@ img {
 }
 .intro-facts__text {
   max-width: 70ch;
-}
+}/*# sourceMappingURL=style.css.map */
