--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -27,7 +27,7 @@
 
 //Globals
 body {
-    font-family: 'open-sans', sans-serif;
+    font-family: "open-sans", sans-serif;
     background-color: var(--primary-color);
     color: var(--text-color);
     line-height: var(--line-height-base);
@@ -38,8 +38,9 @@ main {
     padding: 1.2em;
 }
 
-h1, h2 {
-    font-family: 'bebasneue';
+h1,
+h2 {
+    font-family: "bebasneue";
 }
 
 h1 {
@@ -84,6 +85,7 @@ img {
 }
 
 .section-wave {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -95,10 +97,21 @@ img {
         font-size: 3em;
     }
     &__icon {
-        max-width: 10%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 30%;
+        background: url(/assets/elements/wave.svg) repeat-x;
+        animation: wave-move 15s linear infinite;
     }
 }
 
+@keyframes wave-move {
+    100% {
+        background-position-x: -50%;
+    }
+}
 
 // Facts about goal 6
 .intro-facts {
