--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -123,6 +123,7 @@ img {
 .horizontal-scroll {
   display: flex;
   height: 100vh;
+  width: 100vw;
   gap: 2rem;
   background-color: #09557e;
   align-items: center;
