--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -84,6 +84,7 @@ img {
 .horizontal-scroll{
     display: flex;
     height: 100vh;
+    width: 100vw;
     gap: 2rem;
     background-color: #09557e;
     align-items: center;
@@ -112,7 +113,7 @@ img {
             box-sizing: border-box;
             display: block;
             width: 15vw;
-        }   
+        }
     }
 }
 
