--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -160,41 +160,6 @@ img {
   align-items: center;
 }
 .intro-facts__text {
-  max-width: 70ch;
-}
-.horizontal-scroll {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  gap: 2rem;
-  background-color: #09557e;
-  align-items: center;
-  overflow-x: hidden;
-}
-.horizontal-scroll .horizontal {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  flex-shrink: 0;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  height: 70vh;
-  width: 30vw;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: 1.5px solid black;
-  border-radius: 20px;
-}
-.horizontal-scroll .horizontal > * {
-  text-align: center;
-}
-.horizontal-scroll .horizontal:nth-child(1) {
-  margin-inline-start: 2rem;
-}
-.horizontal-scroll .horizontal__img {
-  box-sizing: border-box;
-  display: block;
-  width: 15vw;
   max-width: 80ch;
 }
 
@@ -251,4 +216,53 @@ img {
 }
 .footer__text {
   font-size: 0.8rem;
+}
+
+.horizontal {
+  display: flex;
+  height: 100vh;
+  gap: 2rem;
+  background-color: #09557e;
+  align-items: center;
+  overflow-x: hidden;
+}
+.horizontal__container {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  height: 70vh;
+  width: 30%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: 1.5px solid black;
+  border-radius: 20px;
+}
+.horizontal__container:nth-child(1) {
+  margin-inline-start: 2rem;
+}
+
+.scrollContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.scrollContent > * {
+  text-align: center;
+}
+.scrollContent__img, .scrollContent__title {
+  margin-block-end: 0.5rem;
+}
+.scrollContent__img {
+  box-sizing: border-box;
+  display: block;
+  width: 60%;
+}
+.scrollContent__title {
+  font-size: clamp(1.2rem, 2.5vw, 2rem);
+}
+.scrollContent__paragraph {
+  font-size: clamp(1rem, 2vw, 1.2rem);
 }/*# sourceMappingURL=style.css.map */
