--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -189,39 +189,52 @@ img {
 }
 
 
-.horizontal-scroll{
+.horizontal{
     display: flex;
     height: 100vh;
-    width: 100vw;
     gap: 2rem;
     background-color: #09557e;
     align-items: center;
     overflow-x: hidden;
-    .horizontal{
+    &__container{
         display: flex;
-        flex-wrap: wrap;
         flex-direction: column;
         flex-shrink: 0;
         justify-content: center;
         align-items: center;
         padding: 1rem;
         height: 70vh;
-        width: 30vw;
+        width: 30%;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         border: 1.5px solid black;
         border-radius: 20px;
-        & > *{
-            text-align: center;
-        }
         &:nth-child(1){
             margin-inline-start: 2rem;
         }
-        
-        &__img{
-            box-sizing: border-box;
-            display: block;
-            width: 15vw;
-        }
     }
 }
+.scrollContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    & > *{
+        text-align: center;
+    }
+    &__img, &__title{
+        margin-block-end: 0.5rem;
+    }
+    &__img{
+        box-sizing: border-box;
+        display: block;
+        width: 60%;
+    }
+    &__title{
+        font-size: clamp(1.2rem, 2.5vw, 2rem);
+    }
+    &__paragraph{
+        font-size: clamp(1rem, 2vw, 1.2rem);
+    }
+}
+
 
