--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -155,18 +155,6 @@ img {
     background-position-x: 50%;
   }
 }
-
-.intro-facts {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.intro-facts__text {
-
-
-
-
 .facts__intro {
   text-align: center;
   display: flex;
@@ -175,7 +163,7 @@ img {
   padding-block: 5rem;
 }
 .facts__text {
-  max-width: 70ch;
+  max-width: 80ch;
 }
 .facts__container {
   display: grid;
@@ -245,7 +233,7 @@ img {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  height: 70vh;
+  height: 80vh;
   width: 30%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border: 1.5px solid black;
@@ -277,15 +265,19 @@ img {
 }
 .scrollContent__paragraph {
   font-size: clamp(1rem, 2vw, 1.2rem);
-=======
-.horizontal-scroll .horizontal > * {
-  text-align: center;
 }
-.horizontal-scroll .horizontal:nth-child(1) {
-  margin-inline-start: 2rem;
-}
-.horizontal-scroll .horizontal__img {
-  box-sizing: border-box;
-  display: block;
-  width: 15vw;
+
+@media (max-width: 799px) {
+  .horizontal {
+    flex-direction: column;
+    height: auto;
+    padding: 2rem 0;
+  }
+  .horizontal__container {
+    width: 80%;
+    height: auto;
+  }
+  .horizontal__container:nth-child(1) {
+    margin-inline-start: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
