--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -165,6 +165,7 @@ img {
   transform: translateX(0);
   background: url(/assets/elements/wave.svg) repeat-x;
 }
+
 .facts__intro {
   text-align: center;
   display: flex;
@@ -237,16 +238,12 @@ img {
   overflow-x: hidden;
 }
 .horizontal__container {
-  display: flex;
-  flex-direction: column;
   flex-shrink: 0;
-  justify-content: center;
-  align-items: center;
   padding: 1rem;
-  height: 80vh;
+  height: 75%;
   width: 30%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: 1.5px solid black;
+  border: 1.5px solid #fff;
   border-radius: 20px;
 }
 .horizontal__container:nth-child(1) {
@@ -258,17 +255,13 @@ img {
   flex-direction: column;
   align-items: center;
   height: 100%;
+  margin-block-start: 2rem;
 }
 .scrollContent > * {
   text-align: center;
 }
-.scrollContent__img, .scrollContent__title {
-  margin-block-end: 0.5rem;
-}
 .scrollContent__img {
-  box-sizing: border-box;
-  display: block;
-  width: 60%;
+  width: 30%;
 }
 .scrollContent__title {
   font-size: clamp(1.2rem, 2.5vw, 2rem);
