--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -200,7 +200,6 @@ img {
     }
 }
 
-
 .horizontal{
     display: flex;
     height: 100vh;
@@ -209,37 +208,30 @@ img {
     align-items: center;
     overflow-x: hidden;
     &__container{
-        display: flex;
-        flex-direction: column;
         flex-shrink: 0;
-        justify-content: center;
-        align-items: center;
         padding: 1rem;
-        height: 80vh;
+        height: 75%;
         width: 30%;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        border: 1.5px solid black;
+        border: 1.5px solid #fff;
         border-radius: 20px;
         &:nth-child(1){
             margin-inline-start: 2rem;
         }
     }
 }
+
 .scrollContent{
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+    margin-block-start: 2rem;
     & > *{
         text-align: center;
     }
-    &__img, &__title{
-        margin-block-end: 0.5rem;
-    }
     &__img{
-        box-sizing: border-box;
-        display: block;
-        width: 60%;
+        width: 30%;
     }
     &__title{
         font-size: clamp(1.2rem, 2.5vw, 2rem);
@@ -255,7 +247,6 @@ img {
       height: auto ;
       padding: 2rem 0;
     }
-  
     .horizontal__container {
       width: 80% ;
       height: auto;
