--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -152,6 +152,7 @@ img {
   text-align: center;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 .section-wave__text {
   font-size: 3em;
@@ -160,12 +161,67 @@ img {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 200%;
+  width: 100%;
   height: 20%;
-  transform: translateX(0);
+  background-size: auto 100%;
   background: url(/assets/elements/wave.svg) repeat-x;
 }
 
+.horizontal {
+  display: flex;
+  height: 100vh;
+  gap: 2rem;
+  background-color: #09557e;
+  align-items: center;
+  overflow-x: hidden;
+}
+.horizontal__container {
+  flex-shrink: 0;
+  padding: 1rem;
+  height: 75%;
+  width: 30%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: 1.5px solid #fff;
+  border-radius: 20px;
+}
+.horizontal__container:nth-child(1) {
+  margin-inline-start: 2rem;
+}
+
+.scrollContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  margin-block-start: 2rem;
+}
+.scrollContent > * {
+  text-align: center;
+}
+.scrollContent__img {
+  width: 30%;
+}
+.scrollContent__title {
+  font-size: clamp(1.2rem, 2.5vw, 2rem);
+}
+.scrollContent__paragraph {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+}
+
+@media (max-width: 799px) {
+  .horizontal {
+    flex-direction: column;
+    height: auto;
+    padding: 2rem 0;
+  }
+  .horizontal__container {
+    width: 80%;
+    height: auto;
+  }
+  .horizontal__container:nth-child(1) {
+    margin-inline-start: 0;
+  }
+}
 .facts__intro {
   text-align: center;
   display: flex;
@@ -227,60 +283,4 @@ img {
 }
 .footer__text {
   font-size: 0.8rem;
-}
-
-.horizontal {
-  display: flex;
-  height: 100vh;
-  gap: 2rem;
-  background-color: #09557e;
-  align-items: center;
-  overflow-x: hidden;
-}
-.horizontal__container {
-  flex-shrink: 0;
-  padding: 1rem;
-  height: 75%;
-  width: 30%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: 1.5px solid #fff;
-  border-radius: 20px;
-}
-.horizontal__container:nth-child(1) {
-  margin-inline-start: 2rem;
-}
-
-.scrollContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  margin-block-start: 2rem;
-}
-.scrollContent > * {
-  text-align: center;
-}
-.scrollContent__img {
-  width: 30%;
-}
-.scrollContent__title {
-  font-size: clamp(1.2rem, 2.5vw, 2rem);
-}
-.scrollContent__paragraph {
-  font-size: clamp(1rem, 2vw, 1.2rem);
-}
-
-@media (max-width: 799px) {
-  .horizontal {
-    flex-direction: column;
-    height: auto;
-    padding: 2rem 0;
-  }
-  .horizontal__container {
-    width: 80%;
-    height: auto;
-  }
-  .horizontal__container:nth-child(1) {
-    margin-inline-start: 0;
-  }
 }/*# sourceMappingURL=style.css.map */
