--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -32,9 +32,7 @@ body {
     line-height: var(--line-height-base);
 }
 
-main {
-    padding: 3rem;
-}
+
 
 h1,
 h2 {
@@ -111,7 +109,6 @@ img {
     text-align: center;
     height: 100vh;
     width: 100%;
-
     &__text {
         font-size: 3em;
     }
@@ -199,7 +196,6 @@ img {
         font-size: 0.8rem;
     }
 }
-
 .horizontal{
     display: flex;
     height: 100vh;
@@ -207,6 +203,7 @@ img {
     background-color: #09557e;
     align-items: center;
     overflow-x: hidden;
+    text-align: center;
     &__container{
         flex-shrink: 0;
         padding: 1rem;
@@ -222,14 +219,12 @@ img {
 }
 
 .scrollContent{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-block: 6rem;
     height: 100%;
-    margin-block-start: 2rem;
-    & > *{
-        text-align: center;
-    }
     &__img{
         width: 30%;
     }
@@ -241,7 +236,7 @@ img {
     }
 }
 
-@media (max-width: 799px) {
+@media (max-width: 999px) {
     .horizontal {
       flex-direction: column ;
       height: auto ;
