--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -59,6 +59,10 @@ img {
     height: auto;
 }
 
+.line-break {
+    display: block;
+}
+
 // Section 1
 .section-top {
     display: flex;
@@ -125,28 +129,128 @@ img {
 .history {
     &__part {
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        position: relative;
 
-        &--sunrise {
-            height: 200vh;
-            background: linear-gradient(180deg,
-                        rgba(0, 0, 0, 1) 0%, 
-                        rgba(84, 57, 99, 1) 26%, 
-                        rgba(204, 83, 107, 1) 55%, 
-                        rgba(253, 146, 112, 1) 91%, 
-                        rgba(0, 0, 0, 1) 91%);
+        &--unset {
+            justify-content: unset;
         }
-
         &--drought {
             background:
               linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(252, 228, 150, 0.1) 65%),
               url('../elements/dry-earth.svg');
-            background-position: top, bottom; /* gradient from top, image at the bottom */
+            background-size: 100%;
+            background-position: center top, center bottom; /* gradient from top, image at the bottom */
+            background-repeat: no-repeat;
+        }
+
+        &--hope {
+            background:
+              linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(241, 138, 35, 0.5) 65%, rgba(103, 99, 16, 0.5) 90%);
+            background-size: 100%;
+            background-position: center top, center bottom; /* gradient from top, image at the bottom */
+            background-repeat: no-repeat;
+        }
+
+        &--red {
+            background:
+              linear-gradient(180deg, rgba(103, 99, 16, 0.5) 0%, rgba(238, 50, 50, 0.5) 30%, rgba(0, 0, 0, 0.1) 80%);
+            background-size: 100%;
+            background-position: center top, center bottom; /* gradient from top, image at the bottom */
             background-repeat: no-repeat;
         }
     }
 
-    img {
+    &__important {
+        font-family: bebasneue;
+        font-size: 3rem;
+        
+        &--name {
+            font-size: 4.5rem;
+        }
+    }
+
+    &__sunrise {
+        height: 200vh;
+        background: linear-gradient(180deg,
+                    rgba(0, 0, 0, 1) 0%, 
+                    rgba(84, 57, 99, 1) 26%, 
+                    rgba(204, 83, 107, 1) 55%, 
+                    rgba(253, 146, 112, 1) 94%, 
+                    rgba(0, 0, 0, 1) 94%);
+    }
+
+
+    &__title {
+        font-size: 3rem;
+    }
+    &__text {
+        max-width: 58ch;
+
+        &--shorter {
+            max-width: 48ch;
+        }
+
+        &--top {
+            margin-block-start: 12rem;
+        }
+
+        &--left {
+            margin-inline-start: 10rem;
+            align-self: flex-start;
+        }
+
+        &--right {
+            align-self: flex-end;
+            margin-inline-end: 10rem;
+            width: 30ch;
+            position: absolute;
+            bottom: 15%;
+        }
+    }
+
+    &__boiling-img {
+        width: 20%;
+        margin-block: 3rem;
+    }
+
+    &__earth-container {
+        width: 100%;
+        height: 30%; /* Half the height of the globe */
+        overflow: hidden;
+        margin-block: 3rem;
+    }
+
+    &__river {
+        stroke: var(--backround-color); 
+        stroke-width: 2.5rem; 
+        fill: transparent;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__img {
         width: 10%;
+
+        &--character {
+            display: flex;
+            position: absolute;
+            bottom: 12%;
+            width: 12%;
+        }
+
+        &--character-small {
+            width: 8%;
+            margin-block-start: 1.5rem;
+        }
+
+        &--earth {
+            width: 30%;
+        }
     }
 }
 
