--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -168,6 +168,61 @@ img {
   background: url(/assets/elements/wave.svg) repeat-x;
 }
 
+.horizontal {
+  display: flex;
+  height: 100vh;
+  gap: 2rem;
+  background-color: #09557e;
+  align-items: center;
+  overflow-x: hidden;
+}
+.horizontal__container {
+  flex-shrink: 0;
+  padding: 1rem;
+  height: 75%;
+  width: 30%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: 1.5px solid #fff;
+  border-radius: 20px;
+}
+.horizontal__container:nth-child(1) {
+  margin-inline-start: 2rem;
+}
+
+.scrollContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  margin-block-start: 2rem;
+}
+.scrollContent > * {
+  text-align: center;
+}
+.scrollContent__img {
+  width: 30%;
+}
+.scrollContent__title {
+  font-size: clamp(1.2rem, 2.5vw, 2rem);
+}
+.scrollContent__paragraph {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+}
+
+@media (max-width: 799px) {
+  .horizontal {
+    flex-direction: column;
+    height: auto;
+    padding: 2rem 0;
+  }
+  .horizontal__container {
+    width: 80%;
+    height: auto;
+  }
+  .horizontal__container:nth-child(1) {
+    margin-inline-start: 0;
+  }
+}
 .facts__intro {
   text-align: center;
 }
