--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -62,8 +62,7 @@ img {
 .line-break {
     display: block;
 }
-
-// Section 1
+// Section 1 - Intro + Waterdrop
 .section-top {
     display: flex;
     flex-direction: column;
@@ -127,6 +126,64 @@ img {
         background: url(/assets/elements/wave.svg) repeat-x;
     }
 }
+
+// Horizontal-Scroll
+.horizontal {
+    display: flex;
+    height: 100vh;
+    gap: 2rem;
+    background-color: #09557e;
+    align-items: center;
+    overflow-x: hidden;
+    &__container {
+        flex-shrink: 0;
+        padding: 1rem;
+        height: 75%;
+        width: 30%;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        border: 1.5px solid #fff;
+        border-radius: 20px;
+        &:nth-child(1) {
+            margin-inline-start: 2rem;
+        }
+    }
+}
+
+.scrollContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin-block-start: 2rem;
+    & > * {
+        text-align: center;
+    }
+    &__img {
+        width: 30%;
+    }
+    &__title {
+        font-size: clamp(1.2rem, 2.5vw, 2rem);
+    }
+    &__paragraph {
+        font-size: clamp(1rem, 2vw, 1.2rem);
+    }
+}
+
+@media (max-width: 799px) {
+    .horizontal {
+        flex-direction: column;
+        height: auto;
+        padding: 2rem 0;
+    }
+    .horizontal__container {
+        width: 80%;
+        height: auto;
+        &:nth-child(1) {
+            margin-inline-start: 0;
+        }
+    }
+}
+
 // Facts about goal 6
 .facts {
     &__intro {
