--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -65,6 +65,9 @@ table {
   --secondary-color: white;
   --backround-color: #0082b5;
   --text-color: white;
+  --font-size-h1: 3.5rem;
+  --font-size-h2: 2rem;
+  --font-size-p: 1.1rem;
   --line-height-base: 1.2;
   --line-height-paragraph: 1.6;
 }
@@ -82,17 +85,17 @@ h2 {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: var(--font-size-h1);
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: var(--font-size-h2);
   margin-block-end: 1rem;
 }
 
 p,
 li {
-  font-size: 1.1rem;
+  font-size: var(--font-size-p);
   font-weight: 400;
   line-height: var(--line-height-paragraph);
 }
@@ -112,17 +115,14 @@ img {
   height: 100vh;
   gap: 2%;
 }
-.section-top__title {
-  font-size: 3.5rem;
-}
 .section-top__text {
-  font-size: 2em;
+  font-size: var(--font-size-h2);
   max-width: 50%;
 }
 .section-top__icon {
-  max-width: 6%;
-  opacity: 0;
   transition: transform 0.5s ease-in-out;
+  opacity: 0;
+  max-width: 6%;
 }
 
 .splash {
@@ -151,7 +151,7 @@ img {
   overflow: hidden;
 }
 .section-wave__text {
-  font-size: 3em;
+  font-size: 3rem;
   max-width: 70%;
 }
 .section-wave__icon {
