Updated JS, added fluid typo.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -65,18 +65,20 @@ table {
   --secondary-color: white;
   --backround-color: #0082b5;
   --text-color: white;
-  --font-size-h1: 3.5rem;
-  --font-size-h2: 2rem;
-  --font-size-p: 1.1rem;
-  --line-height-base: 1.2;
+  --line-height-goal-p: 1.1;
   --line-height-paragraph: 1.6;
+  /* @link https://utopia.fyi/type/calculator?c=390,18,1.333,1920,25,1.25,4,0,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --step-0: clamp(1.125rem, 1.0135rem + 0.4575vw, 1.5625rem);
+  --step-1: clamp(1.4996rem, 1.384rem + 0.4742vw, 1.9531rem);
+  --step-2: clamp(1.999rem, 1.8862rem + 0.4626vw, 2.4414rem);
+  --step-3: clamp(2.6647rem, 2.566rem + 0.4048vw, 3.0518rem);
+  --step-4: clamp(3.552rem, 3.485rem + 0.2747vw, 3.8147rem);
 }
 
 body {
   font-family: "open-sans", sans-serif;
   background-color: var(--primary-color);
   color: var(--text-color);
-  line-height: var(--line-height-base);
 }
 
 h1,
@@ -85,17 +87,17 @@ h2 {
 }
 
 h1 {
-  font-size: var(--font-size-h1);
+  font-size: var(--step-4);
 }
 
 h2 {
-  font-size: var(--font-size-h2);
+  font-size: var(--step-2);
   margin-block-end: 1rem;
 }
 
 p,
 li {
-  font-size: var(--font-size-p);
+  font-size: var(--step-0);
   font-weight: 400;
   line-height: var(--line-height-paragraph);
 }
@@ -117,29 +119,33 @@ img {
   align-items: center;
   text-align: center;
   height: 100vh;
-  gap: 2%;
+  padding-inline: 3rem;
+  gap: 1%;
 }
 .section-top__text {
-  font-size: var(--font-size-h2);
-  max-width: 50%;
+  font-size: var(--step-1);
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: var(--line-height-goal-p);
+  max-width: 40ch;
 }
 .section-top__icon {
   transition: transform 0.5s ease-in-out;
-  opacity: 0;
-  max-width: 6%;
+  opacity: 100%;
+  max-width: 10%;
 }
 
 .splash {
-  animation: splash-effect 1s forwards;
+  animation: splash-effect 5s forwards;
 }
 
 @keyframes splash-effect {
   0% {
     transform: translateY(0) scale(1);
-    opacity: 1;
+    opacity: 20;
   }
   100% {
-    transform: translateY(100vh) scale(5);
+    transform: translateY(150vh) scale(2);
     opacity: 0;
   }
 }
@@ -155,8 +161,7 @@ img {
   overflow: hidden;
 }
 .section-wave__text {
-  font-size: 3rem;
-  max-width: 70%;
+  max-width: 80%;
 }
 .section-wave__icon {
   position: absolute;
@@ -210,10 +215,6 @@ img {
   position: absolute;
   top: 45%;
   left: 40%;
-  font-size: clamp(1.7rem, 2.5vw, 2rem);
-}
-.scrollContent__paragraph {
-  font-size: clamp(1rem, 2vw, 1.2rem);
 }
 
 @media (max-width: 999px) {
