--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -90,7 +90,7 @@ img {
     &__icon {
         transition: transform 0.5s ease-in-out;
         opacity: 100%;
-        max-width: 10%;
+        width: 8vh;
     }
 }
 
@@ -122,7 +122,7 @@ img {
     overflow: hidden;
 
     &__text {
-        max-width: 80%;
+        max-width: 45ch;
     }
     &__icon {
         position: absolute;
