--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -161,7 +161,9 @@ img {
   overflow: hidden;
 }
 .section-wave__text {
+  font-size: var(--step-2);
   max-width: 45ch;
+  transition: font-size 5s;
 }
 .section-wave__icon {
   position: absolute;
