--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -122,7 +122,9 @@ img {
     overflow: hidden;
 
     &__text {
+        font-size: var(--step-2);
         max-width: 45ch;
+        transition: font-size 5s;
     }
     &__icon {
         position: absolute;
