--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -177,8 +177,9 @@ img {
         }
         &--title {
             position: absolute;
-            top: 45%;
-            left: 40%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 }
