--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -192,10 +192,22 @@ img {
         }
     }
 }
+.hidden-font {
+    font-size: 0;
+}
 
-// Facts about goal 6
-.history {
+@keyframes mymove {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(180deg);}
+  }
+// Facts about goal 6 
+.history { 
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+  
     &__part {
+        scroll-snap-align: start;
         height: 100vh;
         display: flex;
         flex-direction: column;
@@ -236,6 +248,8 @@ img {
     &__important {
         font-family: bebasneue;
         font-size: 3rem;
+        max-width: 50ch;
+        transition: all 5s;
         
         &--name {
             font-size: 4.5rem;
@@ -252,12 +266,12 @@ img {
                     rgba(0, 0, 0, 1) 94%);
     }
 
-
     &__title {
         font-size: 3rem;
     }
     &__text {
         max-width: 58ch;
+        transition: all 5s;
 
         &--shorter {
             max-width: 48ch;
@@ -318,6 +332,8 @@ img {
 
         &--earth {
             width: 30%;
+            animation: mymove 5s 1;
+            animation-fill-mode: forwards;
         }
     }
 }
