--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -242,14 +242,6 @@ img {
   font-size: 0;
 }
 
-@keyframes mymove {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(180deg);
-  }
-}
 .history {
   height: 100vh;
   overflow-y: scroll;
@@ -275,25 +267,25 @@ img {
   background-repeat: no-repeat;
 }
 .history__part--hope {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(241, 138, 35, 0.5) 65%, rgba(103, 99, 16, 0.5) 90%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(241, 138, 35, 0.5) 90%, rgba(236, 195, 149, 0.5) 90%);
   background-size: 100%;
   background-position: center top, center bottom; /* gradient from top, image at the bottom */
   background-repeat: no-repeat;
 }
 .history__part--red {
-  background: linear-gradient(180deg, rgba(103, 99, 16, 0.5) 0%, rgba(238, 50, 50, 0.5) 30%, rgba(0, 0, 0, 0.1) 80%);
+  background: linear-gradient(180deg, rgba(236, 195, 149, 0.5) 0, rgba(238, 50, 50, 0.5) 30%, rgba(0, 0, 0, 0.1) 80%);
   background-size: 100%;
   background-position: center top, center bottom; /* gradient from top, image at the bottom */
   background-repeat: no-repeat;
 }
 .history__important {
-  font-family: bebasneue;
-  font-size: 3rem;
-  max-width: 50ch;
-  transition: all 5s;
+  font-family: "open-sans";
+  font-weight: 900;
+  text-transform: uppercase;
+  transition: all 3s;
 }
 .history__important--name {
-  font-size: 4.5rem;
+  margin-block-end: 1rem;
 }
 .history__sunrise {
   height: 200vh;
@@ -303,29 +295,41 @@ img {
   font-size: 3rem;
 }
 .history__text {
-  max-width: 58ch;
-  transition: all 5s;
+  width: 58ch;
+}
+.history__text--growing {
+  transition: all 3s;
 }
 .history__text--shorter {
   max-width: 48ch;
+  transition: all 5s;
+}
+.history__text--written-firstline, .history__text--written-secondline {
+  transition: all 7s;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+}
+.history__text--written-firstline {
+  transition-delay: 0;
+}
+.history__text--written-secondline {
+  transition-delay: 2.5s;
 }
 .history__text--top {
   margin-block-start: 12rem;
 }
 .history__text--left {
-  margin-inline-start: 10rem;
   align-self: flex-start;
+  position: absolute;
+  top: 20%;
 }
 .history__text--right {
   align-self: flex-end;
-  margin-inline-end: 10rem;
+  margin-inline-end: 7rem;
   width: 30ch;
   position: absolute;
   bottom: 15%;
-}
-.history__boiling-img {
-  width: 20%;
-  margin-block: 3rem;
 }
 .history__earth-container {
   width: 100%;
@@ -339,24 +343,36 @@ img {
   fill: transparent;
   width: 100%;
   height: 100%;
+  transition: all 3s;
+  position: absolute;
+  left: 0;
+  top: 25%;
 }
-.history__img {
+.history__character-img {
   width: 10%;
 }
-.history__img--character {
+.history__bucketsCharacter-img {
   display: flex;
   position: absolute;
   bottom: 12%;
   width: 12%;
 }
-.history__img--character-small {
+.history__smallCharacter-img {
   width: 8%;
   margin-block-start: 1.5rem;
 }
-.history__img--earth {
+.history__boiling-img {
+  width: 20%;
+  margin-block: 3rem;
+}
+.history__earth-img {
   width: 30%;
-  animation: mymove 5s 1;
-  animation-fill-mode: forwards;
+  transition: all 6s;
+}
+.history__plant-img {
+  position: absolute;
+  bottom: 10%;
+  transition: all 3s;
 }
 
 .message {
@@ -364,9 +380,9 @@ img {
   text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding-block-start: 4rem;
-  padding: 3rem;
+  height: 100vh;
 }
 .message__text {
   max-width: 75ch;
